# Bank-Customer-Churn-Prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/api/: main.py  schemas.py
app/frontend/: app.py
app/frontend/.streamlit/: config.toml
app/frontend/assets/styles/: custom.css  eda.css  predictions.css
app/frontend/pages/: EDA.py  about_project.py  interpretation.py  modeling.py  predictions.py
config/: recommendations.yaml  risk_factors.yaml
notebooks/: 01_primary_data_review.ipynb  02_eda_analysis.ipynb  03_preprocessing.ipynb  04_data_preparation.ipynb  05_modeling_and_experiments.ipynb  06_model_interpretation.ipynb
src/: customer_generator.py  data_preparation.py  hyperparametr_config.py  hyperparametr_tuner.py  model_manager.py  model_training.py  predict_churn.py  preprocessing.py
